--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Proffy | Sua prataforma de estudos</title>
+        <link rel="stylesheet" href="style.css">
+
+        <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
     </head>
         
-    <body>
+    <body id="page-landing">
         <!--
             all visible content of page
         -->
-        <h1>Proffy</h1>
-        <p>Sua plataforma de estudos online</p>
 
-        <img src="" alt="logo">
+        <div id="container">
+            <h1>Proffy</h1>
+            <p>Sua plataforma de estudos online</p>
 
-        <button>Estudar</button>
-        <button>Dar Aulas</button>
+            <img src="" alt="logo">
+
+            <button>Estudar</button>
+            <button>Dar Aulas</button>
+        </div>
     </body>
 </html>
 
