--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Proffy | Sua prataforma de estudos</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/styles/main.css">
+
+        <link rel="stylesheet" href="/styles/partials/page-landing.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
     </head>
@@ -16,15 +18,31 @@
         <!--
             all visible content of page
         -->
-
         <div id="container">
-            <h1>Proffy</h1>
-            <p>Sua plataforma de estudos online</p>
 
-            <img src="" alt="logo">
+            <div class="logo-container">
+                <img src="/images/logo.svg" alt="logo">
+                <h2>Sua plataforma de estudos online</h2>
+            </div>
 
-            <button>Estudar</button>
-            <button>Dar Aulas</button>
+            <img class="hero-image" src="/images/landing.svg" alt="Plataforma de estudos">
+            
+            <div class="buttons-container">
+                <a class="study" href="/study.html">
+                    <img src="/images/icons/study.svg" alt="Estudar">
+                    estudar
+                </a>
+
+                <a class="give-classes" href="/give-classes.html">
+                    <img src="/images/icons/give-classes.svg" alt="Dar Aulas">
+                    Dar aulas 
+                </a>
+            </div>
+            
+            <p class="total-connections">
+                <img src="/images/icons/purple-heart.svg" alt="purple-heart">
+                total de 100 conexões ja realizadas
+            </p>
         </div>
     </body>
 </html>
