delete markup hours

--- a/study.html
+++ b/study.html
@@ -49,27 +49,6 @@
                             </select>      
                         </div>
 
-                        <div class="select-block">
-                            <label for="weekday">Dia da Semana</label>
-                            <select name="weekday" id="weekday">
-                                <option value="" disabled="" hidden="">Selecione uma opção</option>
-                                <option value="1">Domingo</option>
-                                <option value="2">Segunda-Feira</option>
-                                <option value="3">Terça-Feira</option>
-                                <option value="4">Quarta-Feira</option>
-                                <option value="5">Quinta-Feira</option>
-                                <option value="6">Sexta-Feira</option>
-                                <option value="7">Sábado</option>
-                            </select>   
-                        </div>
-
-                        <div class="input-block">
-                            <label for="time">Hora (de 0 até 24)</label>
-                            <input name="time" id="time" type="time">
-                        </div>
-                        <button type="submit">Filtrar</button>
-
-
                     </form>
 
                 </div>
@@ -99,7 +78,7 @@
                         <p>Preço/hora<strong>R$ 20,00</strong>
                         </p>
                         <button type="button">
-                            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                            <img src="/images/icons/instagram-logo.svg" alt="Whatsapp">Entrar em contato
                         </button>
                     </footer>
                 </article>
@@ -107,10 +86,10 @@
                 <article class="teacher-item">
                     <header>
                         <img 
-                            src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" 
-                            alt="Diego Fernandes">
+                            src="https://scontent.fthe8-1.fna.fbcdn.net/v/t1.0-9/95013607_2368686556763351_6136717429360820224_o.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=X-OGT5S5o24AX_LZUYf&_nc_ht=scontent.fthe8-1.fna&oh=506a2b63f96b3b6672c0c12c184827ec&oe=5F4FB527" 
+                            alt="Paulo Ricardo">
                         <div>
-                            <strong>Diego Fernandes</strong>
+                            <strong>Paulo Ricardo</strong>
                             <span>Química</span>
                         </div>
                     </header>
@@ -121,7 +100,7 @@
                         <p>Preço/hora<strong>R$ 20,00</strong>
                         </p>
                         <button type="button">
-                            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                            <img src="/images/icons/instagram-logo.svg" alt="Whatsapp">Entrar em contato
                         </button>
                     </footer>
                 </article>
