--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <img class="hero-image" src="/images/landing.svg" alt="Plataforma de estudos">
             
             <div class="buttons-container">
-                <a class="study" href="/study.html">
-                    <img src="/images/icons/study.svg" alt="Estudar">
+                <a class="study" href="study.html">
+                    <img src="images/icons/study.svg" alt="Estudar">
                     estudar
                 </a>
 
-                <a class="give-classes" href="/give-classes.html">
-                    <img src="/images/icons/give-classes.svg" alt="Dar Aulas">
+                <a class="give-classes" href="give-classes.html">
+                    <img src="images/icons/give-classes.svg" alt="Dar Aulas">
                     Dar aulas 
                 </a>
             </div>
