--- a/give-classes.html
+++ b/give-classes.html
@@ -7,10 +7,10 @@
 
         <title>Proffy | Sua prataforma de estudos</title>
 
-        <link rel="stylesheet" href="/styles/partials/header.css">
-        <link rel="stylesheet" href="/styles/main.css">
-        <link rel="stylesheet" href="/styles/partials/page-give-classes.css">
-        <link rel="stylesheet" href="/styles/partials/forms.css">
+        <link rel="stylesheet" href="styles/partials/header.css">
+        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/partials/page-give-classes.css">
+        <link rel="stylesheet" href="styles/partials/forms.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
     </head>
@@ -21,10 +21,10 @@
 
                 <div class="top-bar-container">
                     <a href="/">
-                        <img src="/images/icons/back.svg" alt="Voltar">
+                        <img src="images/icons/back.svg" alt="Voltar">
                     </a>
 
-                    <img src="/images/logo.svg" alt="Proffy">
+                    <img src="images/logo.svg" alt="Proffy">
                 </div>
 
                 <div class="header-content">
@@ -101,7 +101,7 @@
 
                 <footer>
                     <p>
-                        <img src="/images/icons/warning.svg" alt="importante!"> Importante <br>
+                        <img src="images/icons/warning.svg" alt="importante!"> Importante <br>
                         Preencha todos os dados 
                     </p>
 
